# ApexAgenteSimple

./: .gitignore  README.md  config.json  main.py  pyproject.toml  requirements.txt  run.toml  runner
app/cli/: app.py  completer.py  data.py
app/gui/: app.py  controller.py  model.py
app/gui/gui/login/: gui.py
app/gui/gui/main/: gui.py
app/gui/gui/main/all/: gui.py
app/gui/gui/main/dashboard/: gui.py
app/gui/gui/main/get/: gui.py
cli/: app.py  completer.py
gui/: app.py  controller.py
gui/gui/: data.py  welcome.py
